<resources>
    <string name="app_name">Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_login_in">Let’s Login in</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="or">OR</string>
    <string name="sign_in_with_password">Sign in with Password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up"> Sign up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="gmail">   Email</string>
    <string name="password">   Password</string>
    <string name="welcome_to_fliqs">Welcome to Fliqs</string>
    <string name="welcome_text">The best movie streaming app of the country to make your days greatfull</string>
    <string name="next">Next</string>
    <string name="getStarted">Get Started</string>
    <string name="title2">Enjoy Your Movies </string>
    <string name="subtitle2">The best movie streaming app of the country to make your days greatfull</string>
    <string name="create_account">Create account</string>
    <string name="your_email">Your Email</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="your_username">Your Username</string>

    <string name="facebook_app_id">1533397520501672</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="your_password">Your Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>

</resources>